src/styles/index.css
@import "globals.css";
@import "./partials/animations.css";
@import "./partials/blocks.css";
@import "./partials/code.css";
@import "./partials/lists.css";
@import "./partials/placeholder.css";
@import "./partials/table.css";
@import "./partials/typography.css";

.ProseMirror {
  @apply z-0 p-24 py-10 caret-black outline-0 dark:caret-white;

  & > * {
    @apply mx-auto sm:max-w-[60ch] md:max-w-[65ch] lg:max-w-[85ch];
  }

  .selection {
    @apply inline;
  }

  .selection,
  *::selection {
    @apply bg-black/10 dark:bg-white/20;
  }

  & > .react-renderer {
    @apply my-12 first:mt-0 last:mb-0;
  }

  &.resize-cursor {
    @apply cursor-col-resize;
  }

  .ProseMirror-gapcursor {
    @apply relative mx-auto w-full max-w-2xl;

    &:after {
      @apply -top-[1.5em] left-0 right-0 mx-auto w-full max-w-2xl border-t-black/40 dark:border-t-white/40;
    }
  }
}

[data-theme="slash-command"] {
  width: 1000vw;
}

